# EuroPar_DBLP

./: .gitignore  environment.yml  pyproject.toml  run.py
2023-09-27/: EuroPar_entries.py  pyproject.toml  run.py
2023-09-27/Documents/: Index of :xml.webloc
2023-09-27/Libraries/Config/: packages.py
2023-09-27/Libraries/Utilities/: file.py  file_library.py  run_library.py  utilities.py
2023-09-27/Phases/01_Extract_DBLP_data/: 01_make_DBLP_entries.py  02_make_EuroPar_entries.py  03_export_EuroPar_entries.py
2023-09-27/Phases/02_Make_stats/: 01_make_author_to_data_dict.py  02_read_author_to_data_dict.py
Libraries/Config/: configuration.py  packages.py  run.py
Libraries/Utilities/: file.py  utilities.py
Original/: dblp2.py  dblp3.py
Phases/: phase_00_ingest_DBLP_dump.py  phase_10_extract_EuroPar_entries.py  phase_20_check_europar_authors.py
