[tool.setuptools]
py-modules = []

[project]
name = "DBLP"
version = "1.0"
description = ""
authors = [{ name = "Luc Bougé", email = "Luc.Bouge@ens-rennes.fr" }]
dependencies = [
    "xmltodict>=0.13.0",
    "run_library @ file:///Users/bouge/Repositories/no_save/GIT/Github_Luc/Libraries/Run/dist/run_library-0.1.0-py3-none-any.whl",
    "more-itertools>=10.1.0",
    "pandas>=2.1.1",
    "unidecode>=1.3.7",
    "attrs>=23.1.0",
    "lxml>=4.9.3",
]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
