[project]
name = "2023-09-27"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Luc Bougé", email = "Luc.Bouge@ens-rennes.fr"},
]
dependencies = [
    "more-itertools>=10.1.0",
    "attrs>=23.1.0",
    "xmltodict>=0.13.0",
    "lxml>=4.9.3",
    "typeguard>=4.1.5",
    "Unidecode>=1.3.7",
    "pandas>=2.1.1",
    "Python-Libraries @ file:///Users/bouge/GIT/Github_Luc/Python_Libraries",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
